Small Fixes v2 - using inline attribute for iconify-icon   - instead of centering with grid - use vh instead of dvh for projects   - to avoid glitchy behaviour on mobile scrolling

--- a/style/main.css
+++ b/style/main.css
@@ -90,12 +90,6 @@ p {
   line-height: 2;
 }
 
-iconify-icon {
-  display: grid;
-  place-content: center;
-  place-items: center;
-}
-
 @media screen and (min-width: 800px) {
   hr {
     width: 4%;
